# hw_OOP

./: .gitignore  CMakeLists.txt  README.md  лаба_3.cpp
src/: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp
tests/: CMakeLists.txt  tests_lab.cpp
лаба1/: lab1.cpp
лаба2/: lab2.cpp
лаба3/: lab3.cpp
лаба4/: lab4.cpp
лаба5/: lab5.cpp
