add_library(lab1_lib STATIC lab1.cpp)
add_executable(lab1_exe lab1.cpp)

add_library(lab2_lib STATIC lab2.cpp)
add_executable(lab2_exe lab2.cpp)

add_library(lab3_lib STATIC lab3.cpp)
add_executable(lab3_exe lab3.cpp)

add_library(lab4_lib STATIC lab4.cpp)
add_executable(lab4_exe lab4.cpp)


add_library(lab5_lib STATIC lab5.cpp)
add_executable(lab5_exe lab5.cpp)